// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Radio Basic 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-dysqqm=""
    >
      The label
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Controlled 1`] = `
<div
  data-css-424rvd=""
>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Selected: 
    green
    <br />
    <button
      onClick={[Function]}
    >
      set to blue
    </button>
  </div>
  <br />
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-dysqqm=""
    >
      The label
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-1w8imqn=""
            >
              <div
                data-css-ppl1jg=""
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Disabled 1`] = `
<div
  data-css-424rvd=""
>
  <div>
    <div
      data-css-sz0dtt=""
      role="radiogroup"
    >
      <div
        data-css-dysqqm=""
      >
        Group disabled
      </div>
      <div
        data-css-xp79s5=""
      >
        <label
          data-css-o2msqt=""
        >
          <div
            data-css-1lxv0yd=""
          >
            <div
              data-css-iwspcj=""
              data-css-rbpa8o=""
            >
              <div
                data-css-fdf00s=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            name="someName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="red"
          />
          <div
            data-css-nrxvu5=""
          >
            Red
          </div>
        </label>
        <label
          data-css-o2msqt=""
        >
          <div
            data-css-1lxv0yd=""
          >
            <div
              data-css-iwspcj=""
              data-css-rbpa8o=""
            >
              <div
                data-css-fdf00s=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            name="someName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="green"
          />
          <div
            data-css-nrxvu5=""
          >
            Green
          </div>
        </label>
        <label
          data-css-o2msqt=""
        >
          <div
            data-css-1lxv0yd=""
          >
            <div
              data-css-iwspcj=""
              data-css-rbpa8o=""
            >
              <div
                data-css-fdf00s=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            name="someName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="blue"
          />
          <div
            data-css-nrxvu5=""
          >
            Blue
          </div>
        </label>
      </div>
    </div>
    <div
      data-css-1a26704=""
      role="radiogroup"
    >
      <div
        data-css-dysqqm=""
      >
        Individual button disabled
      </div>
      <div
        data-css-xp79s5=""
      >
        <label
          data-css-kn3wr0=""
        >
          <div
            data-css-1lxv0yd=""
          >
            <div
              data-css-1lu7sfl=""
              data-css-iwspcj=""
            >
              <div
                data-css-fdf00s=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            name="anotherName"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="red"
          />
          <div
            data-css-nrxvu5=""
          >
            Red
          </div>
        </label>
        <label
          data-css-o2msqt=""
        >
          <div
            data-css-1lxv0yd=""
          >
            <div
              data-css-iwspcj=""
              data-css-rbpa8o=""
            >
              <div
                data-css-fdf00s=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            name="anotherName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="green"
          />
          <div
            data-css-nrxvu5=""
          >
            Green
          </div>
        </label>
        <label
          data-css-kn3wr0=""
        >
          <div
            data-css-1lxv0yd=""
          >
            <div
              data-css-1lu7sfl=""
              data-css-iwspcj=""
            >
              <div
                data-css-fdf00s=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            name="anotherName"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="blue"
          />
          <div
            data-css-nrxvu5=""
          >
            Blue
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Error 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-dysqqm=""
    >
      The label
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-iwspcj=""
            data-css-mmyfiy=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-iwspcj=""
            data-css-mmyfiy=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-iwspcj=""
            data-css-mmyfiy=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Label Only 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-dysqqm=""
    >
      The label
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Multiple Stacked 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio No Labels 1`] = `
<div
  data-css-424rvd=""
>
  <div
    aria-label="You need an a11y label"
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Pre Selected 1`] = `
<div
  data-css-424rvd=""
>
  <div
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-dysqqm=""
    >
      The label
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-1w8imqn=""
            >
              <div
                data-css-ppl1jg=""
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Sub Label Only 1`] = `
<div
  data-css-424rvd=""
>
  <div
    aria-label="You need an a11y label"
    data-css-1a26704=""
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          data-css-nrxvu5=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          data-css-nrxvu5=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1lxv0yd=""
        >
          <div
            data-css-1lu7sfl=""
            data-css-iwspcj=""
          >
            <div
              data-css-fdf00s=""
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-6wu9td=""
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          data-css-nrxvu5=""
        >
          Blue
        </div>
      </label>
    </div>
    <div
      data-css-o89kbw=""
    >
      The sub label
    </div>
  </div>
</div>
`;
